--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -29,6 +30,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.2",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "ts-jest": "^29.4.0",
